--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "apiai",
-  "version": "2.0.7",
-  "description": "Node.js SDK for api.ai",
+  "name": "apiai-proxy",
+  "version": "1.0.0",
+  "description": "Node.js SDK for api.ai, with proxy support",
   "main": "index.js",
   "directories": {
     "example": "examples"
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/api-ai/api-ai-node-js.git"
+    "url": "git+https://github.com/sixtop/api-ai-node-js.git"    
   },
   "keywords": [
     "apiai"
@@ -23,7 +23,7 @@
   "author": "Dmitriy Kuragin",
   "license": "Apache 2.0",
   "bugs": {
-    "url": "https://github.com/api-ai/api-ai-node-js/issues"
+    "url": "https://github.com/sixtop/api-ai-node-js/issues"
   },
-  "homepage": "https://github.com/api-ai/api-ai-node-js#readme"
+  "homepage": "https://github.com/sixtop/api-ai-node-js#readme"
 }
